--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-openbook-v2 = {git = "https://github.com/openbook-dex/openbook-v2", commit = "dc92672", features=["enable-gpl"]}
+openbook-v2 = { git = "https://github.com/openbook-dex/openbook-v2", tag = "v1.1", features = [
+  "enable-gpl",
+] }
 anchor-client = "0.28.0"
 anchor-lang = "0.28.0"
 anchor-spl = "0.28.0"
